PR/50564: Rin Okuyama: sftp: filename completion is broken